# 5v-power-distribution-board

./: .gitmodules
firmware/: EtherBus.hpp  Makefile  SamdBus.hpp  TODO  cross-samd21.txt  main.cpp  meson.build  mongoose_custom.h  mongoose_integration.cpp  mongoose_integration.h  setup.sh
hardware/: 5v-power.kicad_pcb  5v-power.kicad_prl  5v-power.kicad_pro  5v-power.kicad_sch  ethernet.kicad_sch  port.kicad_sch
